# triplicata

./: Cargo.toml  config.ron  dist-workspace.toml
src/: config.rs  config.rs.rej  cube.rs  lib.rs  main.rs  state_machine.rs
wix/: main.wxs
