[package]
name = "triplicata"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.97"
btleplug = "0.11.7"
enigo = { version = "0.3.0", features = ["serde", "wayland"], default-features = false }
futures = "0.3.31"
ron = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.16.0"
